applications/joplin/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joplin-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: joplin-server
  template:
    metadata:
      labels:
        app: joplin-server
    spec:
      containers:
      - name: joplin-server
        image: joplin/server:3.5.2
        ports:
        - containerPort: 22300
