applications/joplin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: joplin-service
spec:
  selector:
    app: joplin-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 22300
